Edited wiki page through web user interface.

--- a/wiki/WidgetClicks.wiki
+++ b/wiki/WidgetClicks.wiki
@@ -13,3 +13,7 @@ The default configuration is:
  *- Double-click - Launch Application
  *- Triple-click - Reconfigure Widget
 
+
+===4x4 Widget===
+
+The 4x4 widget allows you to click on forecast icons in order to display the full forecast information.  The area that the clicks, double-clicks, and triple-clicks mentioned above are registered in is the text area where you see the full forecast information, ie. the bottom 1/3 of the widget.  Click, double-click, or triple-click right on this text area in order to trigger the actions.
